# cms-security-gate-action

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: commit-messages.mdc
.github/workflows/: cms-security-gate.yml
presets/: drupal.json  wordpress.json
scripts/: cms_security_lab_scan.py  enforce_policy.py  generate_remediation_report.py  merge_sarif.py
tests/: test_remediation_report.py  test_security_gate.py
