[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cms-security-gate-action"
version = "0.1.0"
description = "Reusable GitHub Actions security gate for WordPress and Drupal repositories."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
